--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "vite"
+    "start": "vite build && sirv dist"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
+    "sirv-cli": "^2.0.2",
     "svelte": "^3.44.0",
     "vite": "^2.9.7"
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "sirv": "^2.0.2",
     "svelte-spa-router": "^3.2.0"
   }
 }
