--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
+    "@videojs/http-streaming": "^2.14.2",
     "sirv-cli": "^2.0.2",
     "svelte": "^3.44.0",
+    "video.js": "^7.19.2",
     "vite": "^2.9.7"
   },
   "dependencies": {
