--- a/package.json
+++ b/package.json
@@ -1,34 +1,29 @@
 {
-  "name": "thewash",
+  "name": "thewashfrontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "engines": {
-    "node": "14.x"
-  },
   "scripts": {
-    "start": "npx http-server ./dist",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
-  "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
-    "@videojs/http-streaming": "^2.14.2",
-    "sirv-cli": "^2.0.2",
-    "svelte": "^3.44.0",
-    "video.js": "^7.19.2",
-    "vite": "^2.9.7"
-  },
   "dependencies": {
-    "@vime/core": "^5.3.1",
-    "@vime/svelte": "^5.3.1",
-    "axios": "^0.27.2",
-    "hls.js": "^1.1.5",
-    "openplayerjs": "^2.11.0",
-    "sirv": "^2.0.2",
-    "svelte-spa-router": "^3.2.0",
-    "terminal.css": "^0.7.2",
-    "xhook": "^1.5.1"
+    "@oplayer/core": "^1.2.9",
+    "@oplayer/hls": "^1.2.6",
+    "@oplayer/react": "^1.2.4",
+    "@oplayer/ui": "^1.2.10",
+    "axios": "^1.2.2",
+    "hls.js": "^1.2.9",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
+    "preact": "^10.11.3",
+    "react-router-dom": "^6.6.1",
+    "sort-by": "^1.2.0",
+    "terminal.css": "^0.7.2"
+  },
+  "devDependencies": {
+    "@preact/preset-vite": "^2.4.0",
+    "vite": "^4.0.0"
   }
 }
