--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "npx http-server ./dist"
+    "start": "npx pm2 serve build 5000 --spa --watch --restart-delay=3000"
   },
   "dependencies": {
     "@oplayer/core": "^1.2.9",
@@ -18,6 +18,7 @@
     "hls.js": "^1.2.9",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "pm2": "^5.2.2",
     "preact": "^10.11.3",
     "react-router-dom": "^6.6.1",
     "sort-by": "^1.2.0",
